[gd_scene load_steps=6 format=3 uid="uid://b2h8ok8yfc7wb"]

[ext_resource type="Script" path="res://addons/silent_wolf/Scores/Leaderboard.gd" id="1"]
[ext_resource type="Theme" uid="uid://d2eakbmaefnt6" path="res://addons/silent_wolf/assets/themes/sw_theme.tres" id="2_ixaq4"]
[ext_resource type="FontFile" uid="uid://cei1qxr1sela7" path="res://Fonts/Rubik-Bold.ttf" id="3_tqjnp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gw53k"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27hxx"]
bg_color = Color(1, 0.235294, 0.180392, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
expand_margin_left = 25.0
expand_margin_right = 25.0
expand_margin_bottom = 3.0

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gw53k")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="OldBoard" type="MarginContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HighScores" type="TextureRect" parent="Panel/MarginContainer/OldBoard"]
layout_mode = 2

[node name="Board" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_ixaq4")
theme_override_constants/separation = 48

[node name="Title" type="Label" parent="Panel/MarginContainer/Board"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.234887, 0.178822, 1)
theme_override_fonts/font = ExtResource("3_tqjnp")
theme_override_font_sizes/font_size = 48
text = "Leaderboard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextMessage" type="Label" parent="Panel/MarginContainer/Board"]
clip_contents = true
custom_minimum_size = Vector2(280, 10)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_tqjnp")
theme_override_font_sizes/font_size = 28
text = "Leaderboard is disabled in this version\\nTry reinstalling from itch.io"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ScoreItemContainer" type="VBoxContainer" parent="Panel/MarginContainer/Board"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="DisplayNameContainer" type="VBoxContainer" parent="Panel/MarginContainer/Board"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="NameChanger" type="LineEdit" parent="Panel/MarginContainer/Board/DisplayNameContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_fonts/font = ExtResource("3_tqjnp")
theme_override_font_sizes/font_size = 36
placeholder_text = "Your Name..."
alignment = 1
max_length = 8
caret_blink = true
text_direction = 1
language = "en"

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/Board/DisplayNameContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25

[node name="ChangeName" type="Button" parent="Panel/MarginContainer/Board/DisplayNameContainer/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_tqjnp")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_27hxx")
text = "Change Name"

[node name="Tip" type="Label" parent="Panel/MarginContainer/Board/DisplayNameContainer"]
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_tqjnp")
theme_override_font_sizes/font_size = 22
text = "Username can only be changed after 2 minutes"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="NameChangeTime" type="Timer" parent="."]
wait_time = 120.0

[connection signal="text_changed" from="Panel/MarginContainer/Board/DisplayNameContainer/NameChanger" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Panel/MarginContainer/Board/DisplayNameContainer/CenterContainer/ChangeName" to="." method="_on_change_name_pressed"]
[connection signal="timeout" from="NameChangeTime" to="." method="_on_name_change_time_timeout"]
